force-app/main/default/objects/DNE_Commission__c/DNE_Commission__c.object-meta.xml
<CustomObject>
    <label>DNE Commission</label>
    <nameField>
        <displayFormat>DNE Commission-{000000000}</displayFormat>
        <label>DNE Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DNE Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>