force-app/main/default/objects/DNE_Commission__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Commission Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Number</type>
</CustomField>