force-app/main/default/objects/DNE_Commission__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Receiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Kommissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>