force-app/main/default/objects/DNE_Commission__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>DNE Commissions</relationshipLabel>
    <relationshipName>DNE_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>