force-app/main/default/objects/DNE_Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Receiver__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>